Sep 7, 2006

  * FIXED: Bug#205 make --> $(MAKE).  Marc Espie

Feb 1, 2006

  * FIXED: Remove DOS ^M from files in maildrop package.  Richard O'Keefe.

Jan 19, 2006

  * Fixed: Bug#137: make time.c compile for single-threaded operation
    Keri Harris.

Jan 12, 2006

  * Fixed: rewrote most of time.c, providing alarm/4 using portable
    pthread code.

Jan 10, 2006

  * UDP ssize_t portability issues

Dec 23, 2005

  * Start work on UDP support in socket.pl.

Oct 14, 2005

  * Fixed signedness error in library memfile, returning incorrect values
    for size_memory_file/2

Oct 11, 2005

  * PORT: Use plld to compile maildrop as position independent code

May 22, 2005

  * PORT: Added maildrop RFC libraries to distribution

Apr 23, 2005

  * FIXED: mime_parse/3: read stream with Sgetcode rather than Sgetc to
    deal with encoding issues.

Feb 17, 2005

  * ADDED: Provide wide-character support for library(memfile).

Dec 16, 2004

  * FIXED: Socket and ssl interaction problems (Windows).  Matt Lilley.

October 04, 2004

  * FIXED: library(socket) and library(ssl): potential crash and starvation
    issue.  Appears to happen only on Windows NT, but the problem can -at
    least in theory- also appear in other Windows versions.  With thanks
    to Mike Elston for providing the test program.

Sep 21, 2004

  * FIXED: cgi_get_form/1 for www-form-encoded strings with lowercase
    %xx.  John Paolillo.

Jul 18, 2004

  * CLEANUP: ensure mimimal library dependency.  After discussion on
    mailinglist.

Jul 5, 2004

  * CLEANUP: split socket library in two to be able to reuse the
    non-blocking socket stuff in the SSL library.

May 5, 2004

  * FIXED: memory leak in open_memory_file/3.  Fabien Todescato.

Oct 2, 2003

  * PORT: Configure socket library for IRIX 6.5 (Rob Myers).

Aug 28, 2003

  * FIXED: Complete rewrite of library(socket) for MS-Windows.

Jun 2, 2003

  * FIXED: time:remove_alarm/1 for MS-WIndows.  Mike Elston.

Mar 14, 2003
